--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Pr12_BattleTanks_Ustinova_D_V_" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.Pr12_BattleTanks_Ustinova_D_V_" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
+    <style name ="Theme.Pr12_BattleTanks_Ustinova_D_V_" parent = "Base.Theme.Pr12_BattleTanks_Ustinova_D_V_" />
 </resources>
